# kuhn-poker-cfr

./: .gitignore  Makefile  README.md  kt-10  mypy.ini  pyproject.toml
.github/workflows/: py-linting.yml  py-unit-tests.yml
src/: cfr_trainer.py  engine.py  kt-10  kt-10M  kuhn_cfr.py  kuhn_game.py  kuhn_node.py  kuhn_test.py  kuhn_trainer.py  main.py
src/test/unit/: test_kuhn_game.py
tests/unit/: test_kuhn_game.py
